cmake_minimum_required(VERSION 3.16)
project(SCHISM_ESMF_Interface LANGUAGES Fortran C)

enable_language(Fortran)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

# Include GNUInstallDirs for standard installation directories
include(GNUInstallDirs)

# Setup ESMF dependency
include(cmake/ConfigureESMF.cmake)

# Find MPI (required for ParMETIS and SCHISM)
find_package(MPI REQUIRED COMPONENTS Fortran C)
if(MPI_FOUND)
  message(STATUS "MPI Fortran libraries: ${MPI_Fortran_LIBRARIES}")
  message(STATUS "MPI C libraries: ${MPI_C_LIBRARIES}")
endif()


# SCHISM Dependency
# SCHISM is expected to be pre-built. Its location is specified by SCHISM_BUILD_DIR.
# MPI, NetCDF, LAPACK, and BLAS are expected to be handled by the ESMF dependency.
# If ESMF is not found or doesn't correctly export them, issues might arise.
# Users might need to ensure their ESMF build correctly wraps these or install them separately
# and adjust CMake configurations if direct linking becomes necessary.
# Allow both environment variable and CMake variable override
set(SCHISM_BUILD_DIR "$ENV{SCHISM_BUILD_DIR}" CACHE PATH "Path to pre-built SCHISM installation")

if(NOT SCHISM_BUILD_DIR OR NOT EXISTS "${SCHISM_BUILD_DIR}")
  message(FATAL_ERROR
    "SCHISM_BUILD_DIR must be set to a valid SCHISM build directory. "
    "Set it via environment variable or CMake -DSCHISM_BUILD_DIR=/path/to/schism"
  )
endif()

message(STATUS "Using SCHISM build directory: ${SCHISM_BUILD_DIR}")

# Define SCHISM components
set(SCHISM_INCLUDE_DIR "${SCHISM_BUILD_DIR}/include")
set(SCHISM_LIBRARY_DIR "${SCHISM_BUILD_DIR}/lib")

# Verify required directories exist
foreach(DIR ${SCHISM_INCLUDE_DIR} ${SCHISM_LIBRARY_DIR})
  if(NOT EXISTS "${DIR}")
    message(FATAL_ERROR "Required SCHISM directory not found: ${DIR}")
  endif()
endforeach()

# Import SCHISM libraries
# ===========================================================================
# Core libraries
set(SCHISM_LIBRARIES "")
foreach(LIB core hydro turbulence parmetis metis util yaml)
  find_library(SCHISM_${LIB}_PATH
    NAMES ${LIB}
    HINTS ${SCHISM_LIBRARY_DIR}
    NO_DEFAULT_PATH
  )
  if(SCHISM_${LIB}_PATH)
    list(APPEND SCHISM_LIBRARIES ${SCHISM_${LIB}_PATH})
    message(STATUS "Found SCHISM library: ${SCHISM_${LIB}_PATH}")
  else()
    # Only core and hydro are mandatory
    if(LIB STREQUAL "core" OR LIB STREQUAL "hydro")
      message(FATAL_ERROR "SCHISM ${LIB} library not found in ${SCHISM_LIBRARY_DIR}")
    else()
      message(STATUS "SCHISM ${LIB} library not found (optional)")
    endif()
  endif()
endforeach()

message(STATUS "SCHISM libraries: ${SCHISM_LIBRARIES}")

# # Handle FABM dependency
# include(cmake/fabm.cmake)

# Add src subdirectory
add_subdirectory(src)

# add_subdirectory(example)

install(TARGETS main_esmf main_nuopc
     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
)

# Install the configured schism.mk file
set(SCHISM_MK_CONFIGURED_PATH "${CMAKE_BINARY_DIR}/schism.mk")
# Check for existence at configure time for the message.
# install(FILES) will check again at install time.
if(EXISTS "${SCHISM_MK_CONFIGURED_PATH}")
    install(FILES "${SCHISM_MK_CONFIGURED_PATH}"
        DESTINATION "${CMAKE_INSTALL_LIBDIR}" # Matches original Makefile's DESTDIR for schism.mk
        RENAME schism.mk
    )
    message(STATUS "Installation rule added for schism.mk to ${CMAKE_INSTALL_LIBDIR}")
else()
    # This message is for configure time. If schism.mk is generated by a build step
    # that hasn't run yet during configure, it might show this warning but still be installable.
    message(STATUS "Configured schism.mk not found at ${SCHISM_MK_CONFIGURED_PATH} during CMake configure phase. If it's generated by a build command, it might still be installed correctly.")
endif()
